--- a/unos.css
+++ b/unos.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif; /* Opciono: odaberite font koji želite */
+    font-family: Arial, sans-serif; 
     margin: 0;
     padding: 0;
 }
